tests/scan/fixtures/validation/negative/clean_go_clean-api-handler/clean-api-handler.go
// Package clean-api-handler is a clean Go module.
package clean-api-handler

func Hello() string { return "hello" }
